# GeomeTRe

./: .gitattributes  .gitignore  GeomeTRe_run_parallel.sh  MANIFEST.in  Propeller_Geometry.csv  README.md  RepeatsDB_outputs.ipynb  Solenoid_geometry.csv  TR_geometry.py  TR_geometry_PCA.py  TR_geometry_documentation.md  TR_geometry_test.py  Visualize_geometry.ipynb  new_prot_results.csv  package_versions.txt  prot_results.csv  pyproject.toml  requirements.txt  setup.py
GeomeTRe/: GeomeTRe.py  __init__.py
LSA_results/: GeomeTRe_output_all.tsv
New/: Irregular_solenoids.csv  Nice_propellers.csv  Nice_solenoids.csv  TR_geometry_test.py
data/: input_batch_short.tsv
input_data/: input_repeatsdb_v4_filtered.tsv
input_data/test/: test.tsv  test_batch_mode.tsv
notebook/.ipynb_checkpoints/: GeomeTRe_plotting_analysis-checkpoint.ipynb
outputs/: prot_results.tsv
scripts/: README.md  TR_geometry.py  TR_geometry_documentation.md  repeatsdb.tsv  run_TR_geometry.sh
src/: __init__.py  batch_processing.py  main.py  repeats_geometry.py
src/GeomeTRe/: geometry_parameters.py  repeats_geometry.py
src/geometre/: __init__.py  __main__.py  batch_processing.py  draw.py  geometry.py  geometry_parameters.py  main.py  process.py  pymol_drawing.py  single_processing.py  wrapper.py
src/geometre/results/: 2xqh.pdb_result.csv  batch_results.csv
test/: test_bacth_mode.py  test_geometre.py
