[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geometre"
version = "1.0"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "biopython",
    "tmtools",
    "scikit-image",
    "requests"
]
requires-python = ">=3.9"
authors = [
    {name = "Zarifa Osmanli", email = "zerifaosmanli@gmail.com"},
    {name = "Elisa Ferrero", email = "ferreroelisa579@gmail.com"},
    {name = "Damiano Piovesan", email = "damiano.piovesan@unipd.it"}
]
description = "Calculate repeat protein geometrical properties"
readme = "README.md"
license = {text = "GNU General Public License v3.0"}
[project.optional-dependencies]
draw = ["pymol"]

[project.urls]
Repository = "https://github.com/BioComputingUP/GeomeTRe.git"

[project.scripts]
geometre = "geometre.__main__:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true